client project added
title

--- a/22083421_22079017_Client/pom.xml
+++ b/22083421_22079017_Client/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>JavaFXproject</artifactId>
+    <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>JavaFXproject</name>
+    <name>client</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.javafxproject.HelloApplication</mainClass>
+                            <mainClass>com.example.client/com.example.client.ClientApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
